# sc-machine

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  doc_packages.txt  doc_pakages.txt  mkdocs.yml  requirements.txt
cmake/: api.cmake  api.hpp.in  codegen.cmake
config/: sc-server.ini.in  sc-storage.ini.in
docs/: changelog.md  thirdparty.md
docs/cpp/: templates.md
docs/dev/: pr.md
docs/images/templates/: template_named_param_example.gwf
docs/net/: index.md  sctp.md
docs/tools/: sc-server.md
sc-kpm/sc-python/services/http_api/: ws_sc_json.py
sc-memory/: CMakeLists.txt
sc-memory/sc-core/: CMakeLists.txt
sc-memory/sc-memory/: .gitignore  CMakeLists.txt  sc_addr.hpp  sc_defines.hpp  sc_keynodes.hpp  sc_memory.cpp  sc_memory.hpp  sc_module.hpp  sc_storage_interface.hpp  sc_template.hpp
sc-memory/sc-memory/kpm/: sc_agent.hpp
sc-memory/sc-memory/python/: sc_python_module.cpp
sc-memory/sc-memory/utils/: sc_log.cpp  sc_log.hpp  sc_test.hpp
sc-memory/sc-storage/: CMakeLists.txt  sc_storage.cpp  sc_storage.hpp  sc_storage_api.hpp
sc-memory/sc-storage/private/: sc_element.cpp  sc_element.hpp  sc_segment.cpp  sc_segment.hpp
sc-memory/tests/sc-memory/common/: sc-addr.cpp
sc-memory/tests/sc-memory/templates/: sc-templates-common.cpp  sc-templates-sub.cpp
sc-memory/unit_tests/: CMakeLists.txt
sc-memory/unit_tests/sc-memory/: main.cpp
sc-memory/unit_tests/sc-storage/: CMakeLists.txt  main.cpp
sc-memory/unit_tests/sc-storage/units/: sc_segment_test.cpp
sc-network/: CMakeLists.txt
sc-network/sctp/: CMakeLists.txt  sctp.proto
sc-network/sctp/python/: .gitignore  make_proto.sh  run_tests.sh  test.py
sc-network/sctp/python/sctp/: __init__.py  async_client.py  client.py  request.py  sctp_pb2.py  sync_client.py  utils.py
sc-network/sctp/python/test/: fixture.py  main.py  test_connect.py  test_utils.py
sc-server/: CMakeLists.txt
sc-server/sc-server/: CMakeLists.txt  main.cpp  server_config.cpp
sc-server/sc-server/impl/: request_handler.cpp  server.cpp  server.hpp  session.cpp  session.hpp
sc-server/sc-server/src/: server.cpp  server.hpp  server_config.cpp  server_config.hpp
sc-server/sc-server/src/impl/: auth_service.cpp  auth_service.hpp  request_handler.cpp  request_handler.hpp  server.cpp  server.hpp  session.cpp  session.hpp
sc-server/sc-server/src/utils/: hash.cpp  hash.hpp
sc-server/sc-users/: CMakeLists.txt  main.cpp
sc-server/src/: main.cpp  server.cpp  server.hpp  server_config.cpp  server_config.hpp
sc-server/src/impl/: request_handler.hpp  server.cpp  session.cpp
sc-server/tests/: CMakeLists.txt
sc-server/tests/units/: test_auth.cpp  test_hash.cpp
scripts/travis/: install-tests.sh  run-tests.sh
tools/: CMakeLists.txt
tools/builder/: CMakeLists.txt
tools/builder/src/: builder.cpp  scs_translator.cpp
tools/codegen/: CMakeLists.txt  codegen.py  main.py  run_parse.sh
tools/codegen/cpp_parser/: __init__.py  clang.py  class_parser.py  meta_parser.py  parser.py  tools.py  types.py
tools/codegen/templates/: header.hpp.j2  macros.hpp.j2
tools/codegen/test/: test_attrs.py  test_base_object.py  test_field.py  test_function.py  test_parser.py
tools/codegen/test_cpp/: CMakeLists.txt  main.cpp  object.hpp
(+1 files in other folders)
